# programming_1pm_mo_2022

./: .gitignore  README.md  codestyle.md  codestyle.txt  Итоговая работа по программированию 1 семестр.docx  Итоговая работа по программированию 2 семестр.docx
Lecture_12/: CMakeLists.txt  main.cpp
Lecture_12/inc/: Ball.hpp  (+2 more)
Lecture_15/: log.cpp  main.cpp
Logger_example/2/: CMakeLists.txt  log.hpp  main.cpp
database_example/: CMakeLists.txt  data.db  main.cpp
http_example/: CMakeLists.txt  client.cpp  main.cpp
lecture_20/: CMakeLists.txt  main.cpp
lecture_22_exceptions/: main.cpp
opencv_example/: CMakeLists — копия.txt  CMakeLists.txt  main — копия.cpp  main.cpp
opencv_example2/: CMakeLists.txt  main.cpp
Доки по практике 2 сем/: ФИО_Дневник_уч_практика_2_семестр.docx  ФИО_Отчет_уч_практика_2_семестр.docx
Задачи учебной практики 1 семестр/: Задача №1 RuCode.docx  Задача №2 Длинная арифметика.docx  Задача №3 Обработка текста.docx  Задача №4 Битовые операции.docx  Задача №5 Умный динамический массив.docx  Задача №6 Операции над вектором.docx
Задачи учебной практики 2 семестр/: Задача №1 Шифрование.docx  Задача №2 Быстрое копирование.docx  Задача №3 (star) Обратная кинематика.docx  Задача №4 Умный дом.docx
Лабораторные 1 семестр/: Лабораторная работа №1 Типы данных и арифметические операции.docx  Лабораторная работа №10 Практикум по классам.docx  Лабораторная работа №11 Библиотека SFML.docx  Лабораторная работа №2 Условия.docx  Лабораторная работа №3 Циклы.docx  Лабораторная работа №4 Массивы.docx  Лабораторная работа №5 Строки.docx  Лабораторная работа №6 Функции.docx  Лабораторная работа №7 Cmake и система контроля версий.docx  Лабораторная работа №8 Работа с памятью.docx  Лабораторная работа №9 Первый класс.docx
Лабораторные 2 семестр/: Лабораторная работа №1 Анимированный текст.docx  Лабораторная работа №2 Самодельный string.docx  Лабораторная работа №3 Комплексные числа.docx  Лабораторная работа №4 Матрицы.docx  Лабораторная работа №5 Вектор bool.docx  Лабораторная работа №6 Кастомный логгер.docx  Лабораторная работа №7 Геометрические фигуры.docx  Лабораторная работа №8 Стек.docx
Лекция 1 Основы/: test.cpp
Лекция 10 ООП и хип, вектор/: lecture10.cpp
Лекция 2 Условия и циклы/: conditions_cycles.cpp
Лекция 3 Простые алгоритмы и массивы/: ConsoleApplication1.cpp
Лекция 4 Строки/: ConsoleApplication1.cpp
Лекция 5 Функции/: ConsoleApplication1.cpp  Func.cpp
Лекция 6 Cmake и гит/: CMakeLists.txt  main.cpp
Лекция 6 Cmake и гит/inc/: Func.hpp
Лекция 6 Cmake и гит/src/: Func.cpp
Лекция 7 8 Работа с памятью/: ConsoleApplication1.cpp
Лекция 9 Основы ООП/: lecture9.cpp
(+15 files in other folders)
